fixed background image not showing on desktop

--- a/index.css
+++ b/index.css
@@ -98,6 +98,7 @@ section:not(.home) {
 #home {
     top: 0;
     left: 0;
+    background-image: url("./assets/background.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
